# csc231-graphics-project

./: .gitignore  CMakeLists.txt  README.md  backend-main.cpp  backend.md  canvas.h  cube.cpp  cube.h  ellipse.cpp  ellipse.h  flower.cpp  flower.h  frontend-main.cpp  heart.cpp  heart.h  main.cpp  notes.md  parallelogram.cpp  parallelogram.h  parrot.cpp  parrot.h  pentagon.cpp  pentagon.h  point.cpp  point.h  polygon.cpp  polygon.h  polyline.cpp  polyline.h  rectangle.cpp  rectangle.h  rectangular-prism.cpp  rectangular-prism.h  shape.h  star.cpp  star.h  style.cpp  style.h  svg.cpp  svg.h  (+3 more)
